<resources>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="app_name">Masiz Pamoja</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="sign_in_statement">Already have an Account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email">Email</string>
    <string name="full_name">Full names</string>

    <string name="hint_for_user">e.g. 0700000000</string>
    <string name="open">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="more_info">More Information</string>
    <string name="who_are_we">Who we are .....</string>
    <string name="what_do_we_do">What do we do ....</string>
    <string name="chat">Chat</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="issue_title">Title of  Issue</string>
    <string name="getPhoto">Add Photo</string>
    <string name="Done">done</string>
    <string name="messsage">Message : </string>
    <string name="submit">Submit</string>
    <string name="enter_name_error">Enter a name</string>
    <string name="enter_email_error">Enter an email</string>
    <string name="enter_password_error">Enter a password</string>
    <string name="invalid_email_address_error">Enter a valid email</string>
    <string name="error_occurred">Something went wrong</string>
    <string name="explore">Explore</string>
    <string name="recent_blogs">Recent Blogs</string>
    <string name="take_photo">take_photo</string>
    <string name="subject">Subject :</string>
    <string name="event_photo">Event photo</string>
    <string name="this_is_the_name_of_the_event">This is the name of the event</string>
    <string name="about_event_title">About Event</string>
    <string name="date">date</string>
    <string name="no_tickets_for_this_event">No tickets for this event</string>
    <string name="_12_09_2019">12-09-2019</string>
    <string name="title_event">Title event</string>
    <string name="details_of_the_event">Details of the event</string>
    <string name="who_are_we_description">We are an organization focused in unifying and connecting women to information and services designed to address the growing concern on matters affecting women such as Gender based violence and Sexual and Reproductive Health rights (SRHR).</string>
    <string name="be_part_of_us">Be Part Of US</string>
    <string name="our_core_values">Our Core Values</string>
    <string name="mission">Our Mission</string>
    <string name="mission_values">To provide a platform that informs, voices, connects, supports and solves the health dilemmas, social evils, and pave way for justice for the various affected women.</string>
    <string name="vision">Our Vision</string>
    <string name="vision_values">To be an established network within and without Kenya constantly providing credible information, empowerment and be the most trusted solution provider.</string>
    <string name="what_we_do_">Masiz Pamoja begun as an idea of a way to give a voice to the voiceless women in the society, especially after we realised that a lot of evils, such as rape, gender based violence etc. went unnoticed or unmentioned in society. These delicate matters require proper addressing channels to ensure the safety of the victims both physically, psychologically and emotionally.</string>
    <string name="what_we_do_1">Women in the country don’t have enough information to guide their choices and decisions related to sexual health issues. The world is saturated with information with no assurance of its credibility, making choosing difficult. Some issues are still considered taboo, making talking about them difficult in society e.g. family planning, unplanned pregnancies, abortions, rape, gender based violence, gynaecological services, HIV/AIDS etc. Women are not fully exposed to such services, which are important in ensuring a woman\'s healthy life style. Most women don\'t even know where to access these services, their importance, where to go to and most importantly we assume the cost to be so high to afford.  We aim to ensure that women get the right information and the right quality services by partnering with the right stakeholders, the government, the Ministry of Health, the NGOs addressing the various issues, the police and local agencies e.g. gynaecologist association of Kenya and the communications service providers.</string>
    <string name="what_we_do_2">Our aim is to act as a hub for recovery, encouragement and a new dawn for all the souls affected by various social injustices. We aim to connect women to information, guidance and counselling, encouragement, support, relief and a familial sense of belonging.  Our desire is to make more help convenient: from the police to the hospital, and therefore ensure full help, justice and closure; delivering mentorship, by linking victims and conquers with the right guidance and support allows for a self-supporting community which is key to maintaining consistency during the recovery process.  We all face different challenges every day and we come up with different solutions that work for us. Imagine combining and sharing all this knowledge to help our sisters all over the world solve and handle different situations.  This is our dream. A world where women are all heard and seen.</string>
    <string name="help_contacts">Help Contacts</string>
    <string name="done">Done</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="write_a_message">Write a messsage</string>
    <string name="prompt_message">Message...</string>


    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messsages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="contact">Contacts</string>
    <string name="masizPamojaTwitter">\@masizPamoja</string>
    <string name="moiuni">\@MoiUni</string>
    <string name="about_us">About us</string>
    <string name="need_help_image">need help image</string>
    <string name="terms">
This application ( Masiz Pamoja) is designed to assist in connecting the user to available services and programs as provided for under in the application.
These terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Masiz Pamoja International", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the Masiz Pamoja mobile application and any of its services for use
You agree to our Terms of Service (“Terms”) by installing, accessing, or using our app services, features, (together, “Services”).
The Company reserves the right to change these Terms and Conditions at any time and without prior notice. The Company will endeavor to inform you about major modifications to the Terms and Conditions.

</string>
    <string name="terms2">The Any party “user” willing to use this app must provide essential details and services must agree all data submitted through this application is given with the willing consent. The Company will accept no liability from third parties whatsoever, resulting from your providing incorrect or false data
Any user is free to opt out of the service through a delete account option, at which time they cease to be a user</string>
    <string name="terms3"> All information collected, shared and disseminated within the application are subject to confidentiality between the user, partners and other users within the platform
Acceptable use of services
You must access and use our Services only for legal, authorized, and acceptable purposes. You will not use (or assist others in using) our Services in ways that violate, misappropriate, or infringe our rights , our users, or others, including privacy, publicity, intellectual property, or other proprietary rights
</string>
    <string name="terms4">Any third party use of the information (Replication, duplication, and reproduction) provided for commercial gain or any other purpose without company’s consent shall be subjected to legal action.
The company retains the right to withhold and dispense all information from all affiliate parties only including partners at their discretion
Existing relationship between any of our partners and the former users solely exist at the discretion of said individual
</string>
    <string name="terms5">The company is NOT responsible for any unethical behavior or misconduct perpetrated by any user, partner. You use our services at your own risk. We do not warrant that any information provided by us is accurate, complete, or useful unless approved by a practitioner.
    The company does not claim any responsibility for harm or distress that may come to the user
    </string>
    <string name="enter_messsage">Enter messsage</string>
    <string name="send">SEND</string>
    <string-array name="core_values">
        <item>Trust</item>
        <item>Empathy</item>
        <item>Support</item>
        <item> Integrity</item>
        <item> Boldness</item>
    </string-array>
</resources>
