<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.OurActivities">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_margin"
        android:padding="@dimen/medium_margin"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_we_do_"
            android:lineSpacingExtra="4dp"
            android:lineSpacingMultiplier="0.9"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/what_we_do_1"
            android:lineSpacingExtra="4dp"
            android:lineSpacingMultiplier="0.9"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/what_we_do_2"
            android:lineSpacingExtra="4dp"
            android:lineSpacingMultiplier="0.9"
            android:textSize="18sp"/>
    </LinearLayout>

</ScrollView>