<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".views.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:layout_marginBottom="@dimen/activity_large_margin"
            android:src="@drawable/ic_launcher_background" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/emailLayout"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/medium_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/emailEdit"
                        android:theme="@style/TextInputLayoutAppearance"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorLightGray"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/passwordLayout"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_margin"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/passwordEdit"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:theme="@style/TextInputLayoutAppearance"
                        android:textColorHint="@color/colorLightGray"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>


        </RelativeLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/circular_border_shape"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:initialCornerAngle="27dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <RelativeLayout
            android:id="@+id/signUpRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:gravity="center_horizontal|bottom">

            <TextView
                android:id="@+id/noAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:text="@string/no_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_toEndOf="@id/noAccountText"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />





    </LinearLayout>

</ScrollView>